--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -19,7 +19,7 @@
         <h3>All Posts</h3>
         {% for post in posts %}
         <div class="post">
-            <h4>{{ post.user.username }}</h4>
+            <a href="{% url 'profile' post.user.username %}">{{ post.user.username }}</a>
             <p> {{post.body}} </p>
             <p> {{post.timestamp}} </p>
             <p> {{post.likes}} </p>
@@ -28,7 +28,3 @@
     </div>
    </div>
 {% endblock %}
-
-
-<!--post objects daemateba da iqidan wamovigebt parametrad bodys da all postsze davdebt : )
--->
