--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -1,30 +1,37 @@
-{% extends "network/layout.html" %}
-
-{% block body %}
+{% extends "network/layout.html" %} {% block body %}
 <div class="create-container">
-        {% if request.user.is_authenticated %}
-        <p class="new-post-header">New Post</p>
-        <form class="create-form" action="{% url 'newpost' %}" method="POST">
-            {% csrf_token %}
-            <textarea name="body"></textarea>
-            <input type="submit" value="Post" class="create-post-btn btn btn-primary"/>
-        </form>
-        {% else %}
-    <p>Please log in to create a post.</p>
-   {% endif %}
-    </div>
-    
-   <div class="all-posts-container">
-    <div class="post-list" >
-        <h3>All Posts</h3>
-        {% for post in posts %}
-        <div class="post">
-            <a href="{% url 'profile' post.user.username %}">{{ post.user.username }}</a>
-            <p> {{post.body}} </p>
-            <p> {{post.timestamp}} </p>
-            <p>Likes: {{ post.likes.count }}</p>
-        </div>
-        {% endfor %}
-    </div>
-   </div>
+	{% if request.user.is_authenticated %}
+	<p class="new-post-header">New Post</p>
+	<form class="create-form" action="{% url 'newpost' %}" method="POST">
+		{% csrf_token %}
+		<textarea name="body"></textarea>
+		<input type="submit" value="Post" class="create-post-btn btn btn-primary" />
+	</form>
+	{% else %}
+	<p>Please log in to create a post.</p>
+	{% endif %}
+</div>
+
+<div class="all-posts-container">
+	<div class="post-list">
+		<h3>All Posts</h3>
+		{% for post in posts %}
+		<div class="post">
+			<a href="{% url 'profile' post.user.username %}"
+				>{{ post.user.username }}</a
+			>
+			<p>{{post.body}}</p>
+			<p>{{post.timestamp}}</p>
+			{% if user.is_authenticated %}
+			<button class="like-btn" data-post-id="{{ post.id }}">
+				{% if user in post.likes.all %} Unlike {% else %} Like {% endif %}
+			</button>
+			{% endif %}
+			<span id="likes-{{ post.id }}" class="likes-count"
+				>{{ post.likes.count }}</span
+			>
+		</div>
+		{% endfor %}
+	</div>
+</div>
 {% endblock %}
