Fix save button functionality

--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -38,7 +38,7 @@
 			</button>
 			{% endif %}
 			<span id="likes-{{ post.id }}" class="likes-count"
-				>{{ post.likes.count }}</span
+				>Likes: {{ post.likes.count }}</span
 			>
 		</div>
 		{% endfor %}
