--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -42,6 +42,13 @@
 			>
 		</div>
 		{% endfor %}
+		<div class="pagination">
+			{% if posts.has_previous %}
+			<a href="?page={{ posts.previous_page_number }}">Previous</a>
+			{% endif %} {% if posts.has_next %}
+			<a href="?page={{ posts.next_page_number }}">Next</a>
+			{% endif %}
+		</div>
 	</div>
 </div>
 {% endblock %}
