--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -43,7 +43,7 @@
 			</button>
 			{% endif %}
 			<span id="likes-{{ post.id }}" class="likes-count"
-				>Likes: {{ post.likes.count }}</span
+				>{{ post.likes.count }}</span
 			>
 		</div>
 		{% empty %}
