--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -10,7 +10,7 @@ body {
 .profile-container {
 	padding-left: 20px;
 	padding-top: 20px;
-	word-wrap: break-word; /* Handle long text */
+	word-wrap: break-word;
 }
 
 .create-form {
@@ -34,6 +34,16 @@ body {
 .all-posts-container {
 	width: 80%;
 	padding-left: 20px;
+	padding-bottom: 20px;
+}
+
+.posts-container {
+	list-style-type: none;
+	padding-left: 20px;
+	margin-top: 20px;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	gap: 20px;
 }
 
 .post-list {
@@ -41,21 +51,18 @@ body {
 	padding-left: 20px;
 	margin-top: 20px;
 	display: grid;
-	grid-template-columns: repeat(
-		auto-fit,
-		minmax(300px, 1fr)
-	); /* Responsive grid */
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	gap: 20px;
 }
 
 .post {
 	padding: 20px;
 
-	width: auto; /* Let the grid control the width */
+	width: auto;
 	border: 1px solid black;
 	height: auto;
 	border-radius: 8px;
-	word-wrap: break-word; /* Handle long text */
+	word-wrap: break-word;
 	overflow-wrap: break-word;
 	position: relative;
 }
@@ -80,6 +87,20 @@ textarea {
 }
 
 .edit-btn:hover {
+	opacity: 0.8;
+}
+
+.delete-btn {
+	right: 10px;
+	top: 10px;
+	margin-bottom: 20px;
+	background-color: transparent;
+	border: none;
+	position: absolute;
+	color: rgb(49, 49, 184);
+}
+
+.delete-btn:hover {
 	opacity: 0.8;
 }
 
