--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -28,9 +28,10 @@
 				>{{ post.user.username }}</a
 			>
 			<div class="post-content" id="content-{{ post.id }}">
+				{% if user == post.user %}
 				<button class="edit-btn" data-post-id="{{ post.id }}">Edit</button>
+				{% endif %}
 				<p class="post-body" id="post-body-{{ post.id }}">{{post.body}}</p>
-				{% if user == post.user %} {% endif %}
 			</div>
 			<div class="edit-form" id="edit-form-{{ post.id }}" style="display: none">
 				<textarea id="edit-textarea-{{ post.id }}">{{post.body}}</textarea>
@@ -44,9 +45,8 @@
 				{% if user in post.likes.all %} Unlike {% else %} Like {% endif %}
 			</button>
 			{% endif %}
+			<span>Likes</span>
 			<span id="likes-{{ post.id }}" class="likes-count"></span>
-				{{ post.likes.count }}</span
-			>
 		</div>
 		{% endfor %}
 	</div>
