--- a/project4/network/templates/network/register.html
+++ b/project4/network/templates/network/register.html
@@ -44,6 +44,8 @@
 	<input class="btn btn-primary" type="submit" value="Register" />
 </form>
 
-Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+<span style="padding-left: 20px">
+	Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+</span>
 
 {% endblock %}
